--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -147,6 +147,7 @@ body {
   font-size: 1.6rem;
   font-family: Gordita, sans-serif;
   color: var(--text-color);
+  background: var(--body-bg);
 }
 
 a {
@@ -160,12 +161,15 @@ button {
   background: transparent;
 }
 
+a,
+img,
 button,
 input,
 textarea,
 select {
   font-family: inherit;
   color: inherit;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .icon {
@@ -1208,9 +1212,22 @@ html.dark {
   --icon-color: brightness(0) saturate(100%) invert(100%) sepia(0%)
       saturate(0%) hue-rotate(355deg) brightness(103%) contrast(102%);
   --header-bg-color: #171c28;
+  --body-bg: #292e39;
   --top-act-group-bg-color: #292e39;
   --top-act-group-shadow: rgba(0, 0, 0, 0.2);
   --top-act-group-separate: #ededf6;
+  --dropdown-bg-color: #2f3441;
+  --dropdown-shadow-color: rgba(23, 28, 40, 0.4);
+  --dropdown-arrow-color: brightness(0) saturate(100%) invert(16%) sepia(9%)
+      saturate(1664%) hue-rotate(186deg) brightness(91%) contrast(84%);
+  --top-menu-border-color: #171c28;
+  --top-menu-cate-color: brightness(0) saturate(100%) invert(94%) sepia(13%)
+      saturate(355%) hue-rotate(255deg) brightness(106%) contrast(96%);
+}
+@media (max-width: 991.98px) {
+  html.dark {
+    --header-shadow-color: rgba(0, 0, 0, 0.2);
+  }
 }
 
 html {
@@ -1218,9 +1235,20 @@ html {
   --icon-color: brightness(0) saturate(100%) invert(9%) sepia(6%)
       saturate(6804%) hue-rotate(213deg) brightness(87%) contrast(95%);
   --header-bg-color: #eee;
+  --body-bg: #f6f6f6;
   --top-act-group-bg-color: #fff;
   --top-act-group-shadow: rgba(237, 237, 246, 0.2);
   --top-act-group-separate: #ededf6;
+  --header-bg-color-mobile: #fff;
+  --dropdown-bg-color: #fff;
+  --dropdown-shadow-color: rgba(200, 200, 200, 0.4);
+  --top-menu-border-color: #d2d1d6;
+}
+@media (max-width: 991.98px) {
+  html {
+    --header-shadow-color: rgba(237, 237, 246, 0.2);
+    --header-bg-color: #fff;
+  }
 }
 
 .top-act__btn, .top-act__group, .top-act, .navbar__link, .navbar__list, .top-bar {
@@ -1231,9 +1259,20 @@ html {
 .header {
   background: var(--header-bg-color);
 }
+@media (max-width: 991.98px) {
+  .header {
+    box-shadow: 0px 20px 60px 10px var(--header-shadow-color);
+  }
+}
 
 .top-bar {
+  position: relative;
   padding: 30px 0;
+}
+@media (max-width: 767.98px) {
+  .top-bar {
+    justify-content: space-between;
+  }
 }
 @media (max-width: 575.98px) {
   .top-bar {
@@ -1255,26 +1294,87 @@ html {
 }
 
 .navbar {
-  margin-left: 144px;
+  margin-left: 129px;
+}
+.navbar__item:hover .dropdown {
+  display: block;
+}
+@media (max-width: 991.98px) {
+  .navbar__item {
+    width: 100%;
+  }
+  .navbar__item:hover .dropdown {
+    display: none;
+  }
+}
+.navbar__close-btn {
+  display: none;
+}
+@media (max-width: 991.98px) {
+  .navbar__close-btn {
+    display: block;
+    padding: 10px 40px;
+  }
 }
 @media (max-width: 1199.98px) {
   .navbar {
-    margin-left: 50px;
+    margin-left: 35px;
   }
 }
 @media (max-width: 991.98px) {
   .navbar {
-    display: none;
+    background: #fff;
+    position: fixed;
+    z-index: 9;
+    inset: 0 50% 0 0;
+    padding: 20px 0;
+    margin-left: 0;
+    translate: -100%;
+    transition: translate, 0.5s;
+  }
+  .navbar.show {
+    translate: 0%;
+  }
+  .navbar.show ~ .navbar__overlay {
+    visibility: visible;
+    opacity: 1;
   }
 }
-.navbar__list {
-  column-gap: 30px;
+.navbar__overlay {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity, visibility;
+  transition-duration: 0.5;
+}
+@media (max-width: 991.98px) {
+  .navbar__overlay {
+    z-index: 8;
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.4);
+  }
+}
+@media (max-width: 991.98px) {
+  .navbar__list {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 .navbar__link {
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+  padding: 0 40px;
   column-gap: 6px;
   font-size: 1.5rem;
   font-weight: 500;
   line-height: 146.667%;
+}
+@media (max-width: 991.98px) {
+  .navbar__link {
+    font-size: 1.6rem;
+    line-height: 150%;
+  }
 }
 .navbar__arrow {
   margin-top: 3px;
@@ -1283,6 +1383,11 @@ html {
 .top-act {
   column-gap: 20px;
   margin-left: auto;
+}
+@media (max-width: 767.98px) {
+  .top-act {
+    margin: 0;
+  }
 }
 .top-act__group {
   min-width: 50px;
@@ -1338,6 +1443,11 @@ html {
     margin-left: 39px;
   }
 }
+@media (max-width: 575.98px) {
+  .logo {
+    margin-left: 0;
+  }
+}
 .logo__title {
   font-size: 2.2rem;
   font-weight: 700;
@@ -1352,6 +1462,118 @@ html {
   .logo__icon {
     width: 24px;
   }
+}
+
+.dropdown {
+  position: absolute;
+  left: 0;
+  width: min(1240px, 100%);
+  padding-top: 54px;
+  display: none;
+}
+.dropdown__inner {
+  --inner-padding: 30px;
+  position: relative;
+  padding: var(--inner-padding);
+  border-radius: 20px;
+  background: var(--dropdown-bg-color);
+  box-shadow: 0px 40px 90px 20px var(--dropdown-shadow-color);
+}
+.dropdown__inner::before {
+  content: url("../icons/dropdown-arrow.svg");
+  position: absolute;
+  top: -13px;
+  left: var(--arrow-left-pos);
+  translate: -50%;
+  filter: var(--dropdown-arrow-color);
+}
+
+.top-menu {
+  --main-column-width: 292px;
+  --max-menu--height: calc(min(582px, 100vh - 158px) - var(--inner-padding) * 2);
+  position: relative;
+}
+.top-menu__main {
+  width: var(--main-column-width);
+  height: var(--max-menu--height);
+  border-right: 1px solid var(--top-menu-border-color);
+  overflow-y: auto;
+}
+
+.menu-column {
+  display: flex;
+  gap: 14px;
+}
+.menu-column + .menu-column {
+  margin-top: 22px;
+}
+.menu-column__icon {
+  position: relative;
+  flex-shrink: 0;
+  width: 36px;
+  height: 36px;
+}
+@media (max-width: 1199.98px) {
+  .menu-column__icon {
+    display: none;
+  }
+}
+.menu-column__content {
+  flex: 1;
+}
+.menu-column__icon-1 {
+  width: 30px;
+  height: 30px;
+  object-fit: contain;
+}
+.menu-column__icon-2 {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 24px;
+  height: 24px;
+  object-fit: contain;
+  filter: var(--top-menu-cate-color);
+}
+.menu-column__heading {
+  margin-top: 4px;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 150%;
+}
+.menu-column__list {
+  margin-top: 19px;
+}
+.menu-column__item--active .sub-menu {
+  display: grid;
+}
+.menu-column__item--active > .menu-column__link, .menu-column__item:hover > .menu-column__link {
+  color: #0071dc;
+  font-weight: 500;
+}
+.menu-column__link {
+  display: block;
+  padding: 7px 0;
+  font-size: 1.4rem;
+  line-height: 142.857%;
+}
+
+.sub-menu {
+  position: absolute;
+  inset: 0 0 0 var(--main-column-width);
+  display: none;
+  grid-template-columns: repeat(3, 1fr);
+  gap: var(--inner-padding);
+  padding-left: var(--inner-padding);
+  overflow-y: auto;
+}
+.sub-menu--not-main {
+  display: grid;
+  inset: initial;
+  position: initial;
+  grid-template-columns: repeat(4, 1fr);
+  height: var(--max-menu--height);
+  padding-left: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
