--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -12,6 +12,7 @@ body {
     font-size: 1.6rem;
     font-family: Gordita, sans-serif;
     color: var(--text-color);
+    background: var(--body-bg);
 }
 
 a {
@@ -24,12 +25,15 @@ button {
     background: transparent;
 }
 
+a,
+img,
 button,
 input,
 textarea,
 select {
     font-family: inherit;
     color: inherit;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .icon {
