--- a/scss/component/_logo.scss
+++ b/scss/component/_logo.scss
@@ -9,6 +9,9 @@
         column-gap: 10px;
         margin-left: 39px;
     }
+    @include abstracts.breakpoint(sm) {
+        margin-left: 0;
+    }
     &__title {
         font-size: 2.2rem;
         font-weight: 700;
