--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -1,10 +1,26 @@
+@use "../abstracts";
 html.dark {
     --text-color: #ffffff;
     --icon-color: brightness(0) saturate(100%) invert(100%) sepia(0%)
         saturate(0%) hue-rotate(355deg) brightness(103%) contrast(102%);
 
     --header-bg-color: #171c28;
+    --body-bg: #292e39;
     --top-act-group-bg-color: #292e39;
     --top-act-group-shadow: rgba(0, 0, 0, 0.2);
     --top-act-group-separate: #ededf6;
+
+    @include abstracts.breakpoint(lg) {
+        --header-shadow-color: rgba(0, 0, 0, 0.2);
+    }
+
+    // dropdown
+    --dropdown-bg-color: #2f3441;
+    --dropdown-shadow-color: rgba(23, 28, 40, 0.4);
+
+    --dropdown-arrow-color: brightness(0) saturate(100%) invert(16%) sepia(9%)
+        saturate(1664%) hue-rotate(186deg) brightness(91%) contrast(84%);
+    --top-menu-border-color: #171c28;
+    --top-menu-cate-color: brightness(0) saturate(100%) invert(94%) sepia(13%)
+        saturate(355%) hue-rotate(255deg) brightness(106%) contrast(96%);
 }
