--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -1,10 +1,24 @@
+@use "../abstracts";
+
 html {
     --text-color: #1a162e;
     --icon-color: brightness(0) saturate(100%) invert(9%) sepia(6%)
         saturate(6804%) hue-rotate(213deg) brightness(87%) contrast(95%);
 
     --header-bg-color: #eee;
+    --body-bg: #f6f6f6;
     --top-act-group-bg-color: #fff;
     --top-act-group-shadow: rgba(237, 237, 246, 0.2);
     --top-act-group-separate: #ededf6;
+    --header-bg-color-mobile: #fff;
+
+    @include abstracts.breakpoint(lg) {
+        --header-shadow-color: rgba(237, 237, 246, 0.2);
+        --header-bg-color: #fff;
+    }
+
+    // dropdown
+    --dropdown-bg-color: #fff;
+    --dropdown-shadow-color: rgba(200, 200, 200, 0.4);
+    --top-menu-border-color: #d2d1d6;
 }
