--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -8,6 +8,11 @@
     padding-top: 54px;
     display: none;
 
+    @include abstracts.breakpoint(lg) {
+        position: initial;
+        padding-top: 0;
+    }
+
     &__inner {
         --inner-padding: 30px;
 
@@ -27,6 +32,18 @@
             translate: -50%;
             filter: var(--dropdown-arrow-color);
         }
+        @include abstracts.breakpoint(lg) {
+            padding: 0 40px;
+            border-radius: 0;
+            background: transparent;
+            box-shadow: none;
+            &::before {
+                content: none;
+            }
+        }
+        @include abstracts.breakpoint(sm) {
+            padding: 0 20px;
+        }
     }
 }
 
@@ -40,6 +57,11 @@
         height: var(--max-menu--height);
         border-right: 1px solid var(--top-menu-border-color);
         overflow-y: auto;
+        @include abstracts.breakpoint(lg) {
+            width: 100%;
+            height: auto;
+            border-right: none;
+        }
     }
 }
 
@@ -49,6 +71,9 @@
 
     + .menu-column {
         margin-top: 22px;
+    }
+    @include abstracts.breakpoint(lg) {
+        margin-top: 10px;
     }
 
     &__icon {
@@ -60,6 +85,9 @@
 
         @include abstracts.breakpoint(xl) {
             display: none;
+        }
+        @include abstracts.breakpoint(lg) {
+            display: block;
         }
     }
 
@@ -89,10 +117,16 @@
         font-size: 1.6rem;
         font-weight: 500;
         line-height: 150%;
+        @include abstracts.breakpoint(lg) {
+            margin-bottom: 26px;
+        }
     }
 
     &__list {
         margin-top: 19px;
+        @include abstracts.breakpoint(lg) {
+            margin-top: 0;
+        }
     }
 
     &__item {
@@ -126,6 +160,11 @@
     padding-left: var(--inner-padding);
 
     overflow-y: auto;
+    @include abstracts.breakpoint(lg) {
+        position: initial;
+        grid-template-columns: 1fr;
+        padding-left: 0;
+    }
 
     &--not-main {
         display: grid;
@@ -134,5 +173,10 @@
         grid-template-columns: repeat(4, 1fr);
         height: var(--max-menu--height);
         padding-left: 0;
+
+        @include abstracts.breakpoint(lg) {
+            grid-template-columns: 1fr;
+            height: auto;
+        }
     }
 }
