--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -1,8 +1,8 @@
 @use "../abstracts";
 html.dark {
     --text-color: #ffffff;
-    --icon-color: brightness(0) saturate(100%) invert(100%) sepia(0%)
-        saturate(0%) hue-rotate(355deg) brightness(103%) contrast(102%);
+    --icon-color: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(355deg) brightness(103%)
+        contrast(102%);
 
     --header-bg-color: #171c28;
     --body-bg: #292e39;
@@ -18,9 +18,11 @@ html.dark {
     --dropdown-bg-color: #2f3441;
     --dropdown-shadow-color: rgba(23, 28, 40, 0.4);
 
-    --dropdown-arrow-color: brightness(0) saturate(100%) invert(16%) sepia(9%)
-        saturate(1664%) hue-rotate(186deg) brightness(91%) contrast(84%);
+    --dropdown-arrow-color: brightness(0) saturate(100%) invert(16%) sepia(9%) saturate(1664%) hue-rotate(186deg)
+        brightness(91%) contrast(84%);
     --top-menu-border-color: #171c28;
-    --top-menu-cate-color: brightness(0) saturate(100%) invert(94%) sepia(13%)
-        saturate(355%) hue-rotate(255deg) brightness(106%) contrast(96%);
+    --top-menu-cate-color: brightness(0) saturate(100%) invert(94%) sepia(13%) saturate(355%) hue-rotate(255deg)
+        brightness(106%) contrast(96%);
+    --navbar-bg-color: #292e39;
+    --navbar-shadow: rgba(23, 28, 40, 0.4);
 }
