--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="top-bar">
         <!-- more -->
-        <button class="top-bar__more js-toggle" toggle-target="#navbar">
+        <button class="top-bar__more d-none d-lg-block js-toggle" toggle-target="#navbar">
             <img src="./assets/icons/more.svg" alt="" class="icon top-bar__more-icon" />
         </button>
 
@@ -14,8 +14,18 @@
         <!-- navbar -->
         <nav id="navbar" class="navbar hide">
             <button class="navbar__close-btn js-toggle" toggle-target="#navbar">
-                <img src="./assets/icons/arrow-left.svg" alt="" />
+                <img src="./assets/icons/arrow-left.svg" alt="" class="icon" />
             </button>
+            <a href="#!" class="nav-btn d-none d-md-flex">
+                <img src="./assets/icons/cart.svg" alt="" class="icon nav-btn__icon" />
+                <span class="nav-btn__title">Card</span>
+                <span class="nav-btn__qnt">3</span>
+            </a>
+            <a href="#!" class="nav-btn d-none d-md-flex">
+                <img src="./assets/icons/heart.svg" alt="" class="icon nav-btn__icon" />
+                <span class="nav-btn__title">Favorite</span>
+                <span class="nav-btn__qnt">3</span>
+            </a>
             <ul class="navbar__list js-dropdown-list">
                 <li class="navbar__item">
                     <a href="#!" class="navbar__link">
@@ -29,7 +39,7 @@
                                 <div class="top-menu__main">
                                     <!-- Menu column -->
                                     <div class="menu-column">
-                                        <div class="menu-column__icon">
+                                        <div class="menu-column__icon d-lg-none">
                                             <img
                                                 src="./assets/img/category/cate-1.1.svg"
                                                 alt=""
@@ -42,7 +52,7 @@
                                             />
                                         </div>
                                         <div class="menu-column__content">
-                                            <h2 class="menu-column__heading">All Departments</h2>
+                                            <h2 class="menu-column__heading d-lg-none">All Departments</h2>
                                             <ul class="menu-column__list js-menu-list">
                                                 <li class="menu-column__item">
                                                     <a href="#!" class="menu-column__link">
@@ -4600,13 +4610,13 @@
         <div class="navbar__overlay js-toggle" toggle-target="#navbar"></div>
 
         <div class="top-act">
-            <div class="top-act__group top-act__group--single">
+            <div class="top-act__group d-md-none top-act__group--single">
                 <button class="top-act__btn">
                     <img src="./assets/icons/search.svg" alt="" class="icon top-act__icon" />
                 </button>
             </div>
 
-            <div class="top-act__group">
+            <div class="top-act__group d-md-none">
                 <button class="top-act__btn">
                     <img src="./assets/icons/heart.svg" alt="" class="icon top-act__icon" />
                     <span class="top-act__title">03</span>
