--- a/scss/component/_logo.scss
+++ b/scss/component/_logo.scss
@@ -5,24 +5,24 @@
     align-items: center;
     column-gap: 14px;
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         column-gap: 10px;
         margin-left: 39px;
     }
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
         margin-left: 0;
     }
     &__title {
         font-size: 2.2rem;
         font-weight: 700;
         line-height: 145.455%;
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             font-size: 1.8rem;
         }
     }
 
     &__icon {
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             width: 24px;
         }
     }
