--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,7 +7,7 @@
 
 .header {
     background: var(--header-bg-color);
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         box-shadow: 0px 20px 60px 10px var(--header-shadow-color);
     }
 }
@@ -15,16 +15,17 @@
 .top-bar {
     @extend %flexItemCenter;
     position: relative;
+    z-index: 1;
     padding: 30px 0;
 
-    @include abstracts.breakpoint(md) {
+    @include abstracts.screen(md) {
         justify-content: space-between;
     }
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
         padding: 16px 0;
     }
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         padding: 22px 0;
     }
 }
@@ -37,7 +38,7 @@
             display: block;
         }
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             width: 100%;
             &:hover .dropdown {
                 display: none;
@@ -51,19 +52,19 @@
 
     &__close-btn {
         display: none;
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             display: block;
             padding: 10px 40px;
         }
-        @include abstracts.breakpoint(sm) {
+        @include abstracts.screen(sm) {
             padding: 0 20px 10px;
         }
     }
 
-    @include abstracts.breakpoint(xl) {
+    @include abstracts.screen(xl) {
         margin-left: 35px;
     }
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         border-radius: 0px 20px 20px 0px;
 
         background: var(--navbar-bg-color);
@@ -84,7 +85,7 @@
             opacity: 1;
         }
     }
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
         inset: 0 20% 0 0;
     }
 
@@ -94,7 +95,7 @@
         transition: opacity, visibility;
         transition-duration: 0.5;
 
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             z-index: 8;
             position: fixed;
             inset: 0;
@@ -103,20 +104,20 @@
     }
     &__list {
         @extend %flexItemCenter;
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             flex-direction: column;
             align-items: flex-start;
             overscroll-behavior: contain;
             overflow-y: auto;
             height: calc(100% - 40px);
         }
-        @include abstracts.breakpoint(md) {
+        @include abstracts.screen(md) {
             flex-direction: column;
             align-items: flex-start;
             overflow-y: auto;
             height: calc(100% - 140px);
         }
-        @include abstracts.breakpoint(md) {
+        @include abstracts.screen(md) {
             flex-direction: column;
             align-items: flex-start;
             overflow-y: auto;
@@ -134,11 +135,11 @@
         font-size: 1.5rem;
         font-weight: 500;
         line-height: 146.667%;
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             font-size: 1.6rem;
             line-height: 150%;
         }
-        @include abstracts.breakpoint(sm) {
+        @include abstracts.screen(sm) {
             height: 44px;
             padding: 0 20px;
         }
@@ -147,7 +148,7 @@
     &__arrow {
         margin-top: 3px;
         transition: 0.3s;
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             rotate: -90deg;
         }
     }
@@ -162,7 +163,7 @@
     column-gap: 20px;
     margin-left: auto;
 
-    @include abstracts.breakpoint(md) {
+    @include abstracts.screen(md) {
         margin: 0;
     }
 
@@ -176,7 +177,7 @@
     }
 
     &__group--single {
-        @include abstracts.breakpoint(lg) {
+        @include abstracts.screen(lg) {
             display: none;
         }
     }
@@ -216,7 +217,7 @@
     align-items: center;
 
     height: 50px;
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
         height: 44px;
         padding: 0 20px;
     }
