--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -12,7 +12,7 @@ html {
     --top-act-group-separate: #ededf6;
     --header-bg-color-mobile: #fff;
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
         --header-shadow-color: rgba(237, 237, 246, 0.2);
         --header-bg-color: #fff;
     }
