--- a/scss/component/_index.scss
+++ b/scss/component/_index.scss
@@ -1,3 +1,6 @@
 @forward "./logo";
 @forward "./dropdown";
 @forward "./slideshow";
+@forward "./cateitem";
+@forward "./buttons";
+@forward "./product-card";
