--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -44,4 +44,11 @@ html {
     // like-btn
     --like-btn-bg-color: #fff;
     --like-btn-shadow: rgba(124, 124, 124, 0.2);
+
+    // filter
+    --filter-bg-color-btn: #fff;
+    --filter-bg-color: #fff;
+    --filter-form-shadow: rgba(200, 200, 200, 0.4);
+
+    --form-tag-bg-color: #f8f8fb;
 }
