--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,7 +171,9 @@ textarea,
 select {
   font-family: inherit;
   color: inherit;
+  border: none;
   -webkit-tap-highlight-color: transparent;
+  outline: none;
 }
 
 .icon {
@@ -1333,6 +1335,12 @@ html.dark {
   --product-shadow: rgba(0, 0, 0, 0.2);
   --like-btn-bg-color: #292e39;
   --like-btn-shadow: rgba(124, 124, 124, 0.2);
+  --filter-bg-color-btn: #171c28;
+  --filter-bg-color: #292e39;
+  --filter-form-shadow: rgba(0, 0, 0, 0.4);
+  --form-tag-bg-color: #171c28;
+  --filter-arrow-up-color: brightness(0) saturate(100%) invert(15%) sepia(14%) saturate(867%) hue-rotate(183deg)
+      brightness(94%) contrast(91%);
 }
 @media (max-width: 991.98px) {
   html.dark {
@@ -1364,6 +1372,10 @@ html {
   --product-shadow: rgba(237, 237, 246, 0.2);
   --like-btn-bg-color: #fff;
   --like-btn-shadow: rgba(124, 124, 124, 0.2);
+  --filter-bg-color-btn: #fff;
+  --filter-bg-color: #fff;
+  --filter-form-shadow: rgba(200, 200, 200, 0.4);
+  --form-tag-bg-color: #f8f8fb;
 }
 @media (max-width: 991.98px) {
   html {
@@ -1978,7 +1990,7 @@ html {
   font-weight: 700;
   line-height: 142.857%;
   border-radius: 6px;
-  background: var(--filter-bg-color);
+  background: var(--filter-bg-color-btn);
 }
 
 .like-btn {
@@ -1999,6 +2011,41 @@ html {
 }
 .like-btn__icon--liked {
   margin-top: 7px;
+}
+
+.btn {
+  height: 46px;
+  padding: 0 20px;
+  border-radius: 6px;
+  background: #f8f8fb;
+  font-size: 1.8rem;
+  font-weight: 500;
+  user-select: none;
+}
+.btn + .btn {
+  margin-left: 20px;
+}
+.btn--text {
+  color: #9e9da8;
+  background: transparent;
+  font-weight: 400;
+}
+.btn--primary {
+  background: #ffb700;
+}
+.btn--outline {
+  background: transparent;
+  border: 1px solid #d2d1d6;
+}
+.btn--rounded {
+  border-radius: 99px;
+}
+.btn[disabled], .btn--disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+.btn:hover {
+  opacity: 0.9;
 }
 
 .product-card {
@@ -2041,6 +2088,255 @@ html {
 }
 .product-card__star {
   margin: 0 6px 0 auto;
+}
+
+.filter-wrap {
+  position: relative;
+  z-index: 1;
+}
+
+.filter {
+  position: absolute;
+  right: 0;
+  top: 55px;
+  padding: 30px 0;
+  border-radius: 20px;
+  background: var(--filter-bg-color);
+  filter: drop-shadow(0px 40px 90px var(--filter-form-shadow));
+  transition: opacity, visibility;
+  transition-duration: 0.2s;
+}
+@media (max-width: 575.98px) {
+  .filter {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    inset: 0;
+    border-radius: 0;
+  }
+}
+.filter.hide {
+  opacity: 0;
+  visibility: hidden;
+}
+.filter__arrow {
+  position: absolute;
+  right: 27px;
+  top: -17px;
+  height: 20.75px;
+  filter: var(--filter-arrow-up-color);
+}
+.filter__heading {
+  font-size: 2.2rem;
+  font-weight: 500;
+  line-height: 145.455%;
+}
+.filter__form {
+  margin-top: 30px;
+}
+.filter__form-group {
+  margin-top: 20px;
+}
+.filter__form-group--inline {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
+.filter__form-label {
+  font-size: 2.2rem;
+  font-weight: 500;
+  line-height: 145.455%;
+}
+.filter__form-label--small {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 142.857%;
+}
+.filter__form-text-input {
+  display: flex;
+  align-items: center;
+  width: 334px;
+  height: 44px;
+  border-radius: 6px;
+  border: 1px solid #d2d1d6;
+  padding: 0 16px;
+  overflow: hidden;
+}
+.filter__form-text-input--small {
+  width: 121px;
+  height: 36px;
+  padding: 0 12px;
+}
+@media (max-width: 1199.98px) {
+  .filter__form-text-input--small {
+    width: 100%;
+  }
+}
+@media (max-width: 575.98px) {
+  .filter__form-text-input {
+    width: 100%;
+  }
+}
+.filter__form-input {
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 142.857%;
+  width: 100%;
+  background: transparent;
+}
+@media (max-width: 575.98px) {
+  .filter__form-input {
+    font-size: 1.6rem;
+  }
+}
+.filter__form-input::placeholder {
+  font-weight: 400;
+}
+.filter__form-input-icon {
+  margin-left: 12px;
+}
+.filter__form-slider {
+  position: relative;
+  width: 100%;
+  height: 2px;
+  background: #d2d1d6;
+}
+.filter__form-slider::before, .filter__form-slider::after {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  background: var(--filter-bg-color);
+  border: 6px solid #ffb700;
+  top: 50%;
+  translate: 0 -50%;
+}
+.filter__form-slider::before {
+  left: var(--min-value);
+}
+.filter__form-slider::after {
+  left: var(--max-value);
+}
+.filter__form-select-wrap {
+  height: 45px;
+  display: flex;
+  align-items: center;
+  border-radius: 6px;
+  border: 1px solid #d2d1d6;
+}
+.filter__form-select {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 14px;
+  min-width: var(--width, 108px);
+  height: calc(100% - 10px);
+  cursor: pointer;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 142.857%;
+}
+@media (max-width: 1199.98px) {
+  .filter__form-select {
+    flex: 1;
+  }
+}
+@media (max-width: 575.98px) {
+  .filter__form-select:nth-child(1) {
+    --width: 132px !important;
+    width: var(--width, 83px);
+  }
+}
+.filter__form-select + .filter__form-select {
+  border-left: 1px solid #d2d1d6;
+}
+.filter__form-tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px 20px;
+}
+@media (max-width: 575.98px) {
+  .filter__form-tags {
+    gap: 9px;
+  }
+}
+.filter__form-tag {
+  color: #9e9da8;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 142.857%;
+  padding: 6px 12px;
+  border-radius: 6px;
+  background: var(--form-tag-bg-color);
+}
+.filter__form-tag:hover {
+  color: var(--text-color);
+}
+.filter__row {
+  display: flex;
+}
+.filter__separate {
+  margin: 0 30px;
+  width: 1px;
+  background: #eeeeee;
+}
+@media (max-width: 1199.98px) {
+  .filter__separate {
+    width: 100%;
+    margin: 30px 0;
+    height: 1px;
+  }
+}
+.filter__footer {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 32px;
+}
+@media (max-width: 575.98px) {
+  .filter__footer {
+    position: sticky;
+    bottom: 20px;
+    background: var(--filter-bg-color);
+  }
+}
+.filter__btn-cancel, .filter__btn-submit {
+  height: 38px;
+  padding: 0 10px;
+}
+@media (max-width: 575.98px) {
+  .filter__btn-cancel, .filter__btn-submit {
+    flex: 1;
+    height: 42px;
+  }
+}
+.filter__btn-cancel {
+  font-size: 1.5rem;
+}
+.filter__btn-submit {
+  font-size: 1.4rem;
+}
+.filter__heading, .filter__content, .filter__footer {
+  padding: 0 30px;
+}
+.filter__content {
+  max-height: calc(100vh - 360px);
+  overflow-y: auto;
+  overscroll-behavior: contain;
+}
+@media (max-width: 1199.98px) {
+  .filter__content {
+    flex-direction: column;
+  }
+}
+@media (max-width: 575.98px) {
+  .filter__content {
+    max-height: calc(100vh - 230px);
+    padding-bottom: 40px;
+  }
 }
 
 .home__container {
