--- a/scss/component/_buttons.scss
+++ b/scss/component/_buttons.scss
@@ -10,7 +10,7 @@
     font-weight: 700;
     line-height: 142.857%;
     border-radius: 6px;
-    background: var(--filter-bg-color);
+    background: var(--filter-bg-color-btn);
 }
 
 .like-btn {
@@ -31,5 +31,46 @@
     }
     &__icon--liked {
         margin-top: 7px;
+    }
+}
+
+// buttons
+.btn {
+    height: 46px;
+    padding: 0 20px;
+    border-radius: 6px;
+    background: #f8f8fb;
+    font-size: 1.8rem;
+    font-weight: 500;
+    user-select: none;
+
+    + .btn {
+        margin-left: 20px;
+    }
+
+    &--text {
+        color: #9e9da8;
+        background: transparent;
+        font-weight: 400;
+    }
+
+    &--primary {
+        background: #ffb700;
+    }
+    &--outline {
+        background: transparent;
+        border: 1px solid #d2d1d6;
+    }
+    &--rounded {
+        border-radius: 99px;
+    }
+
+    &[disabled],
+    &--disabled {
+        opacity: 0.5;
+        pointer-events: none;
+    }
+    &:hover {
+        opacity: 0.9;
     }
 }
